# libfod

./: .gitignore  CMakeLists.txt  LICENSE
include/: find_opencl_devices.h
include/rvlm/: filter_opencl_devices.h
src/: fod_common.c  fod_common.h  fod_devfind.c  fod_devfind.h  fod_evaltoken.c  fod_evaltoken.h  fod_lexer.h  fod_lexer.rl  fod_parser.c  fod_parser.h  fod_parser.y  fod_parser_gen.y  fod_tokens.h
test/: main_cmocka.c  test_common.c  test_evaltoken.c  test_lexer.c  test_parser.c
